# slime_os

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DEBUGGING.md  Dockerfile  Justfile  README.md  ROADMAP.md  build.rs  docker-compose.yml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml
boot-contracts/: Cargo.toml
boot-contracts/examples/: verify_release.rs
boot-contracts/src/: bootstate.rs  crc32.rs  generation.rs  handoff.rs  kernel_image.rs  lib.rs  recovery.rs  release.rs  sha256.rs  store_disk.rs  trace.rs  transfer.rs
components/: Cargo.toml  component.ld
components/.cargo/: config.toml
components/bins/: Cargo.toml  build.rs
components/bins/src/: dango_runtime.rs  generation_command.rs  launch_context.rs  lib.rs
components/include/: block_proto.inc  store_proto.inc
components/proto/: Cargo.toml
components/proto/src/: fs.rs  generation.rs  lib.rs  powerbox.rs  spawn.rs
components/proto/tests/: fs.rs  powerbox.rs  spawn.rs
components/runtime/: Cargo.toml
components/runtime/src/: lib.rs  sha256.rs  syscall.rs
components/src/: console.S  dango.S  echo-agent.S  init.S  storage-fault-probe.S  storage-probe.S  storage-store-probe.S  storage-writer.S  sysinfo.S
contracts/: zutai.zti
contracts/_shared/: base.zt  python.zt  rust.zt  zutai.zti
contracts/block/v1/: gen_rust.zt  schema.zt
contracts/bootstate/model/: BootState.cfg  BootState.tla  BootStateMixedEpoch.cfg  BootStateOmitRoot.cfg  BootStateSkipAttempt.cfg  TraceConformance.tla  bootstate.zt
contracts/bootstate/trace/v1/: gen_rust.zt  schema.zt
contracts/bootstate/v1/: gen_rust.zt  schema.zt
contracts/component/v1/: README.md  gen_rust.zt  schema.zt
contracts/fs/v1/: gen_rust.zt  schema.zt
contracts/generation-management/v1/: gen_rust.zt  schema.zt
contracts/generation/v1/: README.md  check-invalid.zt  check-valid.zt  schema.zt
contracts/generation/v1/fixtures/: invalid.zti  (+1 more)
contracts/generation/v2/: check-invalid-layout.zt  gen_rust.zt  schema.zt
contracts/handoff/v1/: gen_rust.zt  schema.zt
contracts/kernel-image/v1/: gen_rust.zt  schema.zt
contracts/powerbox/v1/: gen_rust.zt  schema.zt
contracts/recovery/v1/: gen_rust.zt  schema.zt
contracts/release/v1/: gen_rust.zt  schema.zt
contracts/spawn/v1/: gen_rust.zt  schema.zt
contracts/store/v1/: README.md  gen_rust.zt  schema.zt
contracts/transfer/v1/: gen_rust.zt  schema.zt
devlog/: README.md  TEMPLATE.md
devlog/2026-07-24-boot-check-hangs/: dango-shell-hang-report.md  index.md  stage0-stack-overflow-report.md  transcript.txt
docs/: capability-matrix.md  directions.md
docs/directions/: 01-authority-diff-gate.md  02-revocable-leases.md  03-nondeterminism-as-capabilities.md  05-tpm-bound-boot-state.md  07-schema-interposition.md  08-declarative-supervision.md  09-grant-graph-introspection.md  10-distributed-capabilities.md  11-flight-recorder-replay.md  12-generation-bisect.md  13-shadow-boot.md  14-cross-machine-sync.md  15-zutai-state-migrations.md  16-powerbox.md  17-energy-accounting.md  18-network-authority.md  19-mpk-compartments.md  23-build-provenance.md  24-rights-algebra-model.md  25-resource-accounts.md  26-hermetic-testing.md  27-policy-carrying-generations.md  28-accelerator-objects.md  29-schema-state-merge.md  30-deterministic-on-device-builds.md  31-compat-personality.md  32-scheduling-authority.md  33-secrets-as-capabilities.md  README.md
entry_point/: Cargo.toml  build.rs
entry_point/src/: main.rs
kernel/: Cargo.toml  Justfile  limine.conf  linker.ld
kernel/.cargo/: config.toml
kernel/assets/: ter-u16n.otb
kernel/scripts/: build-iso.sh  run-kernel.sh
kernel/src/: acpi.rs  block_device.rs  block_proto.rs  block_service.rs  boot.rs  bootstrap.rs  component.rs  crc32.rs  crt.rs  dma.rs  frame_buffer.rs  frame_buffer.rs.disabled  gdt.rs  generation.rs  generation_manager.rs  generation_service.rs  gpt.rs  hardware_inventory.rs  input.rs  interrupts.rs  lib.rs  limine.rs  main.rs  nvme.rs  object_store.rs  pci.rs  platform.rs  recovery.rs  serial.rs  sha256.rs  store_proto.rs  store_service.rs  testing.rs  transfer.rs  trap.rs  vga_buffer.rs  virtio_blk.rs
kernel/src/block_proto/: gen.rs
kernel/src/capability/: mod.rs
kernel/src/component/: gen.rs
kernel/src/generation_proto/: mod.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: address_space.rs  heap.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/run/: main.rs  mod.rs  test.rs
kernel/src/store_proto/: gen.rs
kernel/src/syscall/: mod.rs
kernel/src/task/: mod.rs
kernel/src/time/: apic.rs  mod.rs
kernel/tests/: boot.rs  component_image.rs  generation_manager.rs  isolation.rs  kernel_foundation.rs  object_store.rs  should_panic.rs  spawn_authority.rs  storage_capability.rs
kernel_test/: Cargo.toml
roadmap/: 00-backlog.md  01-foundations.md  02-core-runtime.md  03-ros2-compatibility.md  04-platform-hardware.md  05-foreign-workloads.md  06-authority-trust.md  README.md
scripts/: boot_contracts.py  build-directory-fixture.py  build-generation.py  build-storage-fixture.py  build-store-fixture.py  build-transfer.py  check-bootstate-model.py  check-bootstate-trace.py  check-contracts.py  check-dango.py  check-directory.py  check-framework-inventory.py  check-generation-commands.py  check-generation.py  check-no-storage-authority.py  check-powerbox.py  check-recovery.py  check-release-trust.py  check-rollback.py  check-storage.py  check-transfer.py  fs_contracts.py  generate-block-bindings.py  generate-boot-bindings.py  generate-component-bindings.py  generate-fs-bindings.py  generate-generation-management-bindings.py  generate-powerbox-bindings.py  generate-spawn-bindings.py  generate-store-bindings.py  harness.py  release_trust.py  write-removable-image.py  zutai_cli.py
src/: main.rs
stage0/: Cargo.toml
stage0/src/: lib.rs  main.rs
(+5 files in other folders)
