[package]
name = "entry_point"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = "0.11"
slime_os-kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }


[[bin]]
name = "qemu"
path = "src/bin/qemu.rs"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"
serde_json = "1.0"
