[package]
name = "entry_point"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = "0.11"

# Conditional dependency based on features
[build-dependencies.slime_os-kernel]
path = "../kernel"
artifact = "bin"
target = "x86_64-unknown-none"
default-features = false
optional = false


[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
serde_json = "1.0"


[[bin]]
name = "qemu"
path = "src/bin/qemu.rs"

[features]
default = ["bios"]
bios = ["slime_os-kernel/bios"]
uefi = ["slime_os-kernel/uefi"]
