[package]
name = "slime_os-kernel"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
limine = "0.6.5"
volatile = { version = "0.6.1", features = ["unstable"] }
spin = "0.12.2"
noto-sans-mono-bitmap = { version = "0.3.2", features = ["unicode-specials", "size_32"] }
uart_16550 = "0.3.2"
boot-contracts = { path = "../boot-contracts", features = ["release-crypto"] }
sha2 = { version = "0.10.9", default-features = false, features = ["force-soft"] }

[lib]
doctest = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false
